# Amazon-Web-Scraping

./: .gitignore  README.md  main.py  pyproject.toml
src/: llm.py  oxylabs_client.py  services.py
